--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@telegram-apps/sdk-vue": "^2.0.31",
     "vue": "^3.5.18",
     "vue-tg": "^0.9.0"
   },
