--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@telegram-apps/sdk-vue": "^2.0.31",
     "vue": "^3.5.18",
+    "vue-router": "^4.5.1",
     "vue-tg": "^0.9.0"
   },
   "devDependencies": {
