--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.2.3",
     "@telegram-apps/sdk-vue": "^2.0.31",
+    "primevue": "^4.3.9",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
     "vue-tg": "^0.9.0"
