--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@primeuix/themes": "^1.2.3",
     "@telegram-apps/sdk-vue": "^2.0.31",
+    "pinia": "^3.0.3",
     "primevue": "^4.3.9",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
