--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -11,5 +11,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-"include": ["env.d.ts", "src//*.ts", "src//.tsx", "src/**/.vue"]
+"include": ["env.d.ts", "src//*.ts", "src//.tsx", "src/**/.vue", "vite-env.d.ts"]
 }
