--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
-    "typescript": "~5.8.3",
-    "vite": "^7.1.2",
-    "vue-tsc": "^3.0.5"
+    "vite": "^7.1.2"
   }
 }
