--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build":  "vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.0.1",
+    "@fortawesome/free-solid-svg-icons": "^7.0.1",
+    "@fortawesome/vue-fontawesome": "^3.1.2",
     "@primeuix/themes": "^1.2.3",
     "@tailwindcss/vite": "^4.1.13",
     "@telegram-apps/sdk-vue": "^2.0.31",
+    "line-awesome": "^1.3.0",
     "pinia": "^3.0.3",
+    "primeicons": "^7.0.0",
     "primevue": "^4.3.9",
     "tailwindcss": "^4.1.13",
     "vue": "^3.5.18",
