--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@primeuix/themes": "^1.2.3",
     "@tailwindcss/vite": "^4.1.13",
     "@telegram-apps/sdk-vue": "^2.0.31",
+    "@vueuse/core": "^13.9.0",
     "line-awesome": "^1.3.0",
     "pinia": "^3.0.3",
     "primeicons": "^7.0.0",
