--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@fortawesome/vue-fontawesome": "^3.1.2",
     "@primeuix/themes": "^1.2.3",
     "@tailwindcss/vite": "^4.1.13",
-    "@telegram-apps/sdk-vue": "^2.0.31",
+    "@telegram-apps/sdk-vue": "^2.0.30",
     "@vueuse/core": "^13.9.0",
     "line-awesome": "^1.3.0",
     "pinia": "^3.0.3",
@@ -28,7 +28,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
+    "esbuild": "^0.16.8",
     "terser": "^5.44.0",
-    "vite": "^7.1.2"
+    "vite": "^7.1.5"
   }
 }
