--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/vue-fontawesome": "^3.1.2",
     "@primeuix/themes": "^1.2.3",
     "@tailwindcss/vite": "^4.1.13",
+    "@telegram-apps/sdk": "^3.11.5",
     "@vueuse/core": "^13.9.0",
     "line-awesome": "^1.3.0",
     "pinia": "^3.0.3",
