--- a/package.json
+++ b/package.json
@@ -15,16 +15,14 @@
     "@primeuix/themes": "^1.2.3",
     "@tailwindcss/vite": "^4.1.13",
     "@telegram-apps/sdk": "^3.11.5",
-    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "@vueuse/core": "^13.9.0",
-    "leaflet": "^1.9.4",
     "line-awesome": "^1.3.0",
     "pinia": "^3.0.3",
+    "vue3-leaflet": "^1.0.48",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.9",
     "tailwindcss": "^4.1.13",
     "vue": "^3.5.18",
-    "vue-leaflet": "^0.1.0",
     "vue-router": "^4.5.1",
     "vue-tg": "^0.9.0"
   },
