--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/vue-fontawesome": "^3.1.2",
     "@primeuix/themes": "^1.2.3",
     "@tailwindcss/vite": "^4.1.13",
+    "@telegram-apps/init-data-node": "^2.0.10",
     "@telegram-apps/sdk": "^3.11.5",
     "@vue-leaflet/vue-leaflet": "^0.10.1",
     "@vueuse/core": "^13.9.0",
