--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "tailwindcss": "^4.1.13",
     "vue": "^3.5.18",
     "vue-router": "^4.6.3",
-    "vue-tg": "^0.9.0",
-    "vue3-leaflet": "^1.0.48"
+    "vue-tg": "^0.9.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
