--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "@vueuse/core": "^13.9.0",
     "leaflet": "^1.9.4",
     "line-awesome": "^1.3.0",
+    "maplibre-gl": "^5.13.0",
     "pinia": "^3.0.3",
     "primeicons": "^7.0.0",
-    "primevue": "^4.3.9",
+    "primevue": "^4.4.1",
     "tailwindcss": "^4.1.13",
     "vue": "^3.5.18",
     "vue-router": "^4.6.3",
-    "vue-tg": "^0.9.0"
+    "vue-tg": "^0.9.0",
+    "vue3-maplibre-gl": "^4.1.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
